--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.0",
     "microbit-web-bluetooth": "^0.6.0",
     "three": "^0.119.1"
   }
